swagger.json fix
