# api/server.go
@@ -1,7 +1,7 @@
 //     Schemes: http, https
 //     Host: localhost:8080
 //     BasePath: /v2
-//     Version: 1.0.0
+//     Version: 1.0.1
 //     Title: SocialTournamentService API
 //     License: MIT http://opensource.org/licenses/MIT
 //     Contact: Alex Bondar<abondar1992@gmail.com>
@@ -278,7 +278,7 @@ func (s *Server) JoinTournament(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 }
 
-// UpdatePrizes swagger:route PUT /update_prizes
+// UpdatePrizes swagger:route PUT /update_prizes UpdatePrizes
 //
 // Updates player's prize by a getting a list of TournamentPlayer objects
 //
